# content-quality-assessment

./: Containerfile  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yaml
config/: settings.py
graph/: builder.py  state.py
k8s/: deployment.yaml  service.yaml
services/: broken_link_checker.py  content_analyzer.py
