[project]
name = "microfleet"
version = "0.1.0"
description = "local microservice orchestration"
authors = [
    {name = "Arin"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "textstat (>=0.7.7,<0.8.0)",
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "language-tool-python (>=2.9.4,<3.0.0)",
    "langgraph (>=0.4.10,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
